--- a/src/app/hero/hero.component.scss
+++ b/src/app/hero/hero.component.scss
@@ -52,6 +52,7 @@ $transition-time: 0.4s;
 
       width: 100%;
       font-size: 6em;
+      font-weight: bold;
       z-index: 3;
       color: white;
       @media (max-width: $max-width-599) {
